--- a/_config.yml
+++ b/_config.yml
@@ -42,11 +42,11 @@ social:
   email: robmcavalcante@gmail.com           # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
+    - https://twitter.com/robmcavalcante      # change to your twitter homepage
     - https://github.com/robmcavalcante      # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/robmcavalcante
 
 google_site_verification:               # fill in to your verification string
 
